# robot-arm

./: LICENSE
arduino/: arduino.ino
encoder/: Cargo.toml
encoder/encoder_lib/: Cargo.toml
encoder/encoder_lib/encoder_proc_macro/: Cargo.toml
encoder/encoder_lib/encoder_proc_macro/src/: lib.rs
encoder/encoder_lib/src/: command.rs  encoder.rs  error.rs  lib.rs
encoder/encoder_lib/tests/: serde_test.rs
encoder/encoder_ui/: Cargo.toml
encoder/encoder_ui/src/: app.rs  error.rs  main.rs
encoder/logger/: Cargo.toml
encoder/logger/src/: entry.rs  lib.rs  logger.rs  time.rs
