[workspace]
members = [
    "encoder_lib",
    "encoder_ui",
    "encoder_lib/encoder_proc_macro",
    "logger",
]
resolver = "2"

[workspace.dependencies]
thiserror = "1"
encoder_lib = { path = "./encoder_lib" }
encoder_proc_macro = { path = "./encoder_lib/encoder_proc_macro" }
logger = { path = "./logger" }
