[package]
name = "encoder_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.11.4"
thiserror.workspace = true
encoder_lib.workspace = true
eframe = { version = "0.22.0", features = ["wgpu"] }
egui-notify = { git = "https://github.com/ItsEthra/egui-notify", rev = "bc5eb67db58ee663304560dd39ad6b06161ab24f" }
egui_grid = "0.2.0"
egui_extras = "0.22.0"
poll-promise = "0.2.0"
